# problem_solver_agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  OPTIMIZATION_GUIDE.md  README.md  _fix_routes.py  aggregate_for_gemini.py  claude-md-this-file-glistening-gem.md  config.py  debug_api.py  deepseek_client.py  file_monitor.py  human_typer.py  image_grouper.py  jazzy-tickling-wind.md  main.py  prompts.py  pyproject.toml  qwen_client.py  requirements.txt  run_web.py  silent_screencapper.py  solver_client.py  start_web.bat  test_fix_temp.py  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/ui/: badge.tsx  (+3 more)
frontend/src/hooks/: useMediaQuery.ts  useSSE.ts
frontend/src/lib/: utils.ts
frontend/src/stores/: useLayoutStore.ts  useTaskStore.ts  useUploadStore.ts
frontend/src/types/: index.ts
problem_solver_agent/: __init__.py  config.py  config_types.py  file_monitor.py  image_grouper.py  main.py  pipeline.py  prompts.py  qwen_client.py  solver_client.py  utils.py  vision_client.py
scripts/: aggregate_for_gemini.py
tests/: conftest.py  test_config.py  test_utils.py
tests/integration/: test_pipeline.py
tools/: QR_Code.py  human_typer.py  remote_trigger.py  silent_screencapper.py
webapp/: __init__.py  app.py  auto_import.py  config.py  models.py  pipeline.py  routes.py
webapp/data/: tasks.db  tasks.db-shm  tasks.db-wal
webapp/static/: app.js  index.html  style.css
webapp/templates/: 404.html  base.html  index.html  task.html  tasks.html
(+52 files in other folders)
